# orfs-sensor

./: CMakeLists.txt  README.md  main.cpp  sample.avsc  version_config.h.in
MiscBlocks/: AvroSerialization.cpp  AvroSerialization.h  FileSink.cpp  FileSink.h  IQSink.cpp  IQSink.h  IQStream.cpp  IQStream.h  Transmission.cpp  Transmission.h
ProcessingBlocks/: Averaging.cpp  Averaging.h  FFT.cpp  FFT.h  PSDFast.cpp  PSDFast.h  RemoveDC.cpp  RemoveDC.h  RemoveDCRTL.cpp  RemoveDCRTL.h  Windowing.cpp  Windowing.h
cmake/Modules/: FindAvro.cmake  FindJSON-C.cmake  FindLiquid.cmake  FindOpenSSL.cmake  FindRTLSDR.cmake  Findcrypto.cmake  Findlibusb-1.0.cmake
context/: OpenRFSenseContext.cpp  OpenRFSenseContext.h
drivers/: Component.h  Driver.h
drivers/rtlsdr/: rtlsdrDriver.cpp  rtlsdrDriver.h
schemas/: iq-spec.avsc  rtl-spec.avsc
types/: SpectrumSegment.cpp  SpectrumSegment.h
